--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Home</title>
+<title>赤魇的温暖小窝</title>
 <meta charset="utf-8" />
 <meta name="赤魇sama" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="assets/css/main.css" />
