--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- Header -->
 <header id="header" class="alt">
 	<div class="inner">
-		<h1>Epilogue</h1>
-		<p>A free responsive site template</p>
+		<h1>赤魇sama</h1>
+		<p>这里是赤魇的小窝QWQ</p>
 	</div>
 </header>
 
