--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Header -->
 <header id="header" class="alt">
 	<div class="inner">
-		<h1>赤魇sama</h1>
+		<h1>ChiYansama</h1>
 		<p>这里是赤魇的小窝QWQ</p>
 	</div>
 </header>
