--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
 	<!-- Banner -->
 		<section id="intro" class="main">
 			<span class="icon fa-diamond major"></span>
-			<h2>Magna porta maximus</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
-			malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
-			mi porta egestas maximus lorem ipsum dolor.</p>
+			<h2>这里是赤魇的设定哦</h2>
+			<p>全方面的认识一下赤魇吧</p>
 			<ul class="actions">
 				<li><a href="#" class="button big">Learn More</a></li>
 			</ul>
