--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h2>这里是赤魇的设定哦</h2>
 			<p>全方面的认识一下赤魇吧</p>
 			<ul class="actions">
-				<li><a href="https://www.bilibili.com/read/cv10505901" class="button big">Learn More</a></li>
+				<li><a href="https://www.bilibili.com/read/cv10505901" class="button big">点我点我</a></li>
 			</ul>
 		</section>
 
