--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<section class="main items">
 			<article class="item">
 				<header>
-					<a href="#"><img src="images/pi01.jpg" alt="" /></a>
+					<a href="#"><img src="images/pic01.jpg" alt="" /></a>
 					<h3>Feugiat et faucibus</h3>
 				</header>
 				<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
