--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</article>
 			<article class="item">
 				<header>
-					<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+					<a href="#"><img src="images/pi04.jpg" alt="" /></a>
 					<h3>Ipsum sed tempus</h3>
 				</header>
 				<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
