--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 			<article class="item">
 				<header>
 					<a href="#"><img src="images/pic01.jpg" alt="" /></a>
-					<h3>Feugiat et faucibus</h3>
+					<h3>echo</h3>
 				</header>
-				<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+				<p>Miku英文翻唱</p>
 				<ul class="actions">
-					<li><a href="#" class="button">More</a></li>
+					<li><a href="https://www.bilibili.com/video/BV17v411H7t6" class="button">More</a></li>
 				</ul>
 			</article>
 			<article class="item">
