--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 		<section class="main items">
 			<article class="item">
 				<header>
-					<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+					<a href="https://www.bilibili.com/video/BV17v411H7t6"><img src="images/pic01.jpg" alt="" /></a>
 					<h3>echo</h3>
 				</header>
 				<p>Miku英文翻唱</p>
 				<ul class="actions">
-					<li><a href="https://www.bilibili.com/video/BV17v411H7t6" class="button">More</a></li>
+					<li><a href="https://www.bilibili.com/video/BV17v411H7t6" class="button">去看看</a></li>
 				</ul>
 			</article>
 			<article class="item">
