--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 					<a href="https://www.bilibili.com/video/BV17v411H7t6"><img src="images/pic01.jpg" alt="" /></a>
 					<h3>echo</h3>
 				</header>
-				<p>Miku英文翻唱</p>
+				<p>是Miku用英文翻唱的qwq</p>
 				<ul class="actions">
 					<li><a href="https://www.bilibili.com/video/BV17v411H7t6" class="button">去看看</a></li>
 				</ul>
 			</article>
 			<article class="item">
 				<header>
-					<a href="#"><img src="images/pi02.jpg" alt="" /></a>
-					<h3>Blandit adipiscing</h3>
+					<a href="https://www.bilibili.com/video/BV1rL4y1a7Tv"><img src="images/pi02.jpg" alt="" /></a>
+					<h3>请笃信一个梦</h3>
 				</header>
-				<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+				<p>是诗岸翻唱的qaq</p>
 				<ul class="actions">
-					<li><a href="#" class="button">More</a></li>
+					<li><a href="https://www.bilibili.com/video/BV1rL4y1a7Tv" class="button">去看看</a></li>
 				</ul>
 			</article>
 			<article class="item">
