--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@
 
 	<!-- CTA -->
 		<section id="cta" class="main special">
-			<h2>Etiam veroeros lorem</h2>
-			<p>Phasellus ac augue ac magna auctor tempus proin<br />
-			accumsan lacus a nibh commodo in pellentesque dui<br />
-			in hac habitasse platea dictumst.</p>
+			<h2>咱的B站账号</h2>
+			<p>小up更新不易，请各位观众关注一下，多多一键三连支持下哦，</p>
 			<ul class="actions">
-				<li><a href="#" class="button big">Get Started</a></li>
+				<li><a href="https://space.bilibili.com/499904421" class="button big">点个关注好不好嘛</a></li>
 		</footer>
 
 </div>
