--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Wrapper -->
 <div id="wrapper">
 
-	<!-- Banner -->
+	<!-- Banne -->
 		<section id="intro" class="main">
 			<span class="icon fa-diamond major"></span>
 			<h2>这里是赤魇的设定哦</h2>
