--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<!-- CTA -->
 		<section id="cta" class="main special">
 			<h2>咱的B站账号</h2>
-			<p>小up更新不易，请各位观众关注一下，多多一键三连支持下哦，</p>
+			<p>小up更新不易，请各位观众关注一下，多多一键三连支持下哦</p>
 			<ul class="actions">
 				<li><a href="https://space.bilibili.com/499904421" class="button big">点个关注好不好嘛</a></li>
 		</footer>
