--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</article>
 			<article class="item">
 				<header>
-					<a href="https://www.bilibili.com/video/BV1kL411H74Q"><img src="images/pi04.jpg" alt="" /></a>
+					<a href="https://www.bilibili.com/video/BV1kL411H74Q"><img src="images/pic04.jpg" alt="" /></a>
 					<h3>届かない恋（届不到的爱恋）</h3>
 				</header>
 				<p>是虚拟兽人歌手 残音シャド 翻唱的qNq</p>
