--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</header>
 				<p>是虚拟兽人歌手 五世百米 翻唱的qNq</p>
 				<ul class="actions">
-					<li><a href="https://www.bilibili.com/video/BV1kL411H74Q" class="button">去看看</a></li>
+					<li><a href="https://www.bilibili.com/video/BV1va411m7rf/" class="button">去看看</a></li>
 				</ul>
 			</article>
 		</section>
