--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
 			</article>
 		</section>
 
+	<!-- Banner -->
+		<section id="intro" class="main">
+			<span class="icon fa-diamond major"></span>
+			<h2>【动态壁纸】被挂路灯的黑猫</h2>
+			<p>点击下方选择下载源</p>
+			<ul class="actions">
+				<li><a href="https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E7%9A%84%E9%BB%91%E7%8C%AB/default.zip" class="button big">本地下载</a></li>
+				<li><a href="https://www.bilibili.com/read/cv10505901" class="button big">点我点我</a></li>
+			</ul>
+		</section>
+	
 	<!-- CTA -->
 		<section id="cta" class="main special">
 			<h2>咱的B站账号</h2>
