--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<p>点击下方选择下载源</p>
 			<ul class="actions">
 				<li><a href="https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E7%9A%84%E9%BB%91%E7%8C%AB/default.zip" class="button big">本地下载</a></li>
-				<li><a href="https://www.bilibili.com/read/cv10505901" class="button big">点我点我</a></li>
+				<li><a href="https://pan.baidu.com/s/1Cec-on6j1Y3hLJfn5eJi-g" class="button big">百度网盘【密码：jdtk】</a></li>
 			</ul>
 		</section>
 	
