--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<h2>【动态壁纸】末地领主Cen被挂路灯实录</h2>
 			<p>点击下方选择下载源</p>
 			<ul class="actions">
-				<li><a href="https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E6%9C%AB%E5%9C%B0%E9%A2%86%E4%B8%BBcen%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E5%AE%9E%E5%BD%95/cen.z01"a href="https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E6%9C%AB%E5%9C%B0%E9%A2%86%E4%B8%BBcen%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E5%AE%9E%E5%BD%95/cen.zip"a href="https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E6%9C%AB%E5%9C%B0%E9%A2%86%E4%B8%BBcen%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E5%AE%9E%E5%BD%95/cen.z02" class="button big">本地下载</a></li>
+				<li><a href="https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E6%9C%AB%E5%9C%B0%E9%A2%86%E4%B8%BBcen%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E5%AE%9E%E5%BD%95/cen.z01"&"https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E6%9C%AB%E5%9C%B0%E9%A2%86%E4%B8%BBcen%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E5%AE%9E%E5%BD%95/cen.zip"&"https://github.com/chiyansama/chiyansama.github.io/releases/download/%E3%80%90%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8%E3%80%91%E6%9C%AB%E5%9C%B0%E9%A2%86%E4%B8%BBcen%E8%A2%AB%E6%8C%82%E8%B7%AF%E7%81%AF%E5%AE%9E%E5%BD%95/cen.z02" class="button big">本地下载</a></li>
 			</ul>
 		</section>
 	<!-- CTA -->
