--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<h2>【动态壁纸】末地领主Cen被挂路灯实录</h2>
 			<p>点击下方选择下载源</p>
 			<ul class="actions">
-				<li><a href="http://favolinks.com/cenzhutibizhi" class="button big>本地下载</a></li>
+				<li><a href="http://favolinks.com/cenzhutibizhi" class="button big">本地下载】</a></li>
 			</ul>
 		</section>
 	<!-- CTA -->
