--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 			<p>点击下方选择下载源</p>
 			<ul class="actions">
 				<li><a href="http://favolinks.com/cenzhutibizhi" class="button big">本地下载】</a></li>
+				<li><a href="https://pan.baidu.com/s/1DbHPrLqMw7O4n6Q88s8cAw?pwd=ivdt" class="button big">百度网盘</a></li>
+				<li><a href="https://caiyun.139.com/m/i?1A5CwX5ryv3C9" class="button big">和彩云网盘【提取码：o4aq】</a></li>
 			</ul>
 		</section>
 	<!-- CTA -->
